[package]
name = "types"
version = "2.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.79"
serde_derive = "1.0.136"
ts-rs = "6.1"
uuid = { version = "0.8.2", features = ["v4"] }
chrono = "0.4.19"
