[package]
name = "foundation"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
aws-config = { version = "0.56.1" }
aws-sdk-s3 = { version = "0.33.0" }
aws-sdk-sqs = { version = "0.33.0" }
aws-sdk-secretsmanager = { version = "0.34.0" }
http = { version = "0.2.9" }
reqwest = { version = "0.11.22" }
reqwest-retry = { version = "0.3.0" }
reqwest-middleware = { version = "0.2.3" }
reqwest-tracing = { version = "0.4.6" }
twilight-model = { version = "0.15.4" }
mime = { version = "0.3.17" }
aliri = { version = "0.6.2" }
aliri_oauth2 = { version = "0.10.0" }
aliri_clock = { version = "0.1.4" }
jwt = { version = "0.16.0" }
serde_json = { version = "1.0.107" }
lazy_static = "1.4.0"
uuid = { version = "1.5.0", features = ["v4"] }
anyhow = "1.0.75"
log = "0.4.20"
fern = "0.6.2"
serde = "1.0.189"
config = "0.13.3"
async-trait = "0.1.74"
rust-crypto = "0.2.36"
utoipa = "4.0.0"
rocket = { version = "0.5.0-rc.3", features = ["json"] }
