[package]
name = "foundation"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
aws-config = { workspace = true }
aws-sdk-s3 = { workspace = true }
aws-sdk-sqs = { workspace = true }
aws-sdk-secretsmanager = { workspace = true }
http = { version = "0.2.11" }
reqwest = { version = "0.11.22" }
reqwest-retry = { version = "0.3.0" }
reqwest-middleware = { version = "0.2.4" }
reqwest-tracing = { version = "0.4.6" }
twilight-model = { version = "0.15.4" }
mime = { version = "0.3.17" }
jwt = { version = "0.16.0" }
serde_json = { workspace = true }
lazy_static = "1.4.0"
uuid = { version = "1.6.1", features = ["v4"] }
anyhow = "1.0.75"
log = "0.4.20"
fern = "0.6.2"
serde = { workspace = true }
config = "0.13.3"
async-trait = "0.1.74"
rust-crypto = "0.2.36"
utoipa = "4.1.0"
rocket = { workspace = true }
