[package]
name = "libmaccas"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "McDonald's API Client"

[dependencies]
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
serde_derive = "1.0.188"
reqwest = { version = "0.11.20", features = ["json", "gzip"] }
uuid = { version = "1.4.1", features = ["v4"] }
http = "0.2.9"
reqwest-middleware = "0.2.3"
tracing = "0.1.37"
anyhow = "1.0.75"
