[package]
name = "libmaccas"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "McDonald's API Client"

[dependencies]
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.108"
serde_derive = "1.0.190"
reqwest = { version = "0.11.22", features = ["json", "gzip"] }
uuid = { version = "1.5.0", features = ["v4"] }
http = "0.2.9"
reqwest-middleware = "0.2.4"
tracing = "0.1.40"
anyhow = "1.0.75"
