[package]
name = "places"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_derive = { workspace = true }

reqwest = { version = "0.11.22", features = ["json", "gzip"] }
reqwest-middleware = "0.2.4"
http = "1.0.0"
tracing = "0.1.40"
thiserror = "1.0.50"
