[package]
name = "api"
version = "2.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libmaccas = { path = "../../libmaccas" }
libcore = { path = "../libcore" }

simple-dispatcher = "0.2.0"
lambda_runtime = "0.5.1"
lambda_http = "0.5.1"
log = "0.4.14"
serde = "1.0.126"
simple_logger = "1.11.0"
tokio = "1.6.1"
serde_json = "1.0.79"
serde_derive = "1.0.136"
aws-sdk-dynamodb = "0.12.0"
config = { version = "0.13.1", features = ["yaml"] }
aws-config = "0.12.0"
http = "0.2.6"
chrono = "0.4.19"
simplelog = "0.12.0"
uuid = { version = "0.8.2", features = ["v4"] }
jwt = "0.16.0"
